# pre-07

./: .gitignore  Makefile  README.md  curl-command  memo.vue  package-lock.json  package.json
backend/: app.py  delete_row.py  execute.sh  init.py  localhost-key.pem  localhost.pem  pyproject.toml  test.py
backend/models/: models.py
backend/p2hacks/: manage.py
backend/p2hacks/p2hacks/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  docker-compose.yml
frontend/front/: app.vue  nuxt.config.ts  package.json
frontend/front/components/: APIEndPoint.ts  Button.vue  ErrorAlert.vue  Icon.vue  LoadingSpinner.vue  MediaDisplay.vue  Modal.vue  PostForm.vue  PostItem.vue  PostView.vue  SelectPostView.vue  UserAvatar.vue  footer.vue  header.vue  movePostviewButton.vue  textBox.vue
frontend/front/pages/: Post.vue  [username].vue  firstscreen.vue  home.vue  index.vue  login.vue  logout.vue  palette.vue  search.vue  signup.vue
frontend/front/pages/[account]/: [id].vue
