[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Accord33 <skb.ceg.biblia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
