[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Accord33 <skb.ceg.biblia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask = "^3.1.0"
python-multipart = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
